# natelandau.com

./: .csslintrc  .cz.yaml  .gitignore  .htmlhintrc  .jshintrc  .linkspector.yml  .md_link_check_config.json  .mlc_config.json  .pre-commit-config-ci.yaml  .pre-commit-config.yaml  .prettierignore  .secrets.baseline  .stylelintrc.yml  .typos.toml  404.html  CHANGELOG.md  Gemfile  Gruntfile.js  README.md  _config.yml  _config_prod_relative.yml  _config_production.yml  _config_staging.yml  _config_staging_deploy.yml  _config_staging_local.yml  atom.xml  deploy-to-s3.yml  duties.py  feed.json  giscus.json  index.html  index2.html  index3.html  package-lock.json  package.json  pelicanconf.py  publishconf.py  pyproject.toml  requirements.txt  robots.txt  (+3 more)
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
.github/: dependabot.yml  labeler.yml
a-json-feed-for-jekyll/: index.html
about-nathaniel-landau/: index.html
assets/: 2014-05-18-MailAttachments.hazelrules
author/: nate-landau.html  nate-landau2.html  nate-landau3.html
bash-script-sync-macs-dropbox/: index.html
bash-scripting-utilities/: index.html
boilerplate-shell-script-template/: index.html
category/: posts.html  posts2.html  posts3.html
charrette-interviews/: index.html
favorite-chrome-extensions/: index.html
fiddling-old-time-and-bibb-county/: index.html
forced-ranking-product-features-in-a-spreadsheet/: index.html
hazel-rules-mail-attachments/: index.html
how-to-notify-services-when-post-jekyll/: index.html
how-to-preview-rss-feeds-in-safari/: index.html
how-to-stay-current-in-web-technology/: index.html
jekyll-rss-feed-template/: index.html
my-mac-os-zsh-profile/: index.html
my-mac-osx-bash_profile/: index.html
nathaniel-landaus-resume/: index.html
site/: 404.html  (+6 more)
(+182 files in other folders)
